[package]
name = "leptos-altview"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/teenjuna/leptos-altview"
description = "Alternative view macro for Leptos web framework."

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full", "extra-traits"] }
